--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,52 +1,54 @@
+{% extends 'ful/base.html' %}
 {% load static %}
 
-<header data-bs-theme="dark">
-    {% include 'start/includes/inc_menu.html' %}
-</header>
 
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-</head>
-<body>
+{% block content %}
 
-<div class="col-12">
-    <form class="row" method="post" enctype="multipart/form-data">
-        <h1>Авторизация</h1>
-        <div class="col-6">
-            <div class="card">
-                <div class="card-body">
-                    {% csrf_token %}
-                    {{ form.as_p }}
+
+<div class="container overflow-hidden" style="padding-top:200px;">
+    <div class="col-12">
+        <form class="row" method="post" enctype="multipart/form-data">
+            <h1>Авторизация</h1>
+            <div class="col-4">
+                <div class="card">
                     <div class="card-body">
-                        <button type="submit" class="btn btn-success">
-                            Войти
-                        </button>
-                        <div class="btn-group">
-                            <a class="btn btn-danger" href="{% url 'start:start' %}" role="button">Отмена</a>
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <div class="card-body">
+                            <button type="submit" class="btn btn-success">
+                                Войти
+                            </button>
+                            <div class="btn-group">
+                                <a class="btn btn-danger" href="/" role="button">Отмена</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="btn-group">
-                            <a class="btn btn-dark" href="{% url 'users:reset_password' %}" role="button">Восстановить
-                                пароль через генерацию</a>
+                        <div class="card-body">
+                            <div class="btn-group">
+                                <h2>Забыл пароль?</h2>
+                            </div>
+                            <div class="btn-group">
+                                <h3>Можно восстановить</h3>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="btn-group">
-                            <a class="btn btn-secondary" href="{% url 'users:password_reset' %}" role="button">Восстановить
-                                пароль самостоятельно</a>
+                        <div class="card-body">
+                            <div class="btn-group">
+                                <a class="btn btn-info" href="{% url 'users:reset_password' %}" role="button">Придумаю тебе новый пароль</a>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="btn-group">
+                                <h5>или</h5>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="btn-group">
+                                <a class="btn btn-info" href="{% url 'users:password_reset' %}" role="button">Можешь сам придумать новый</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
-
-<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</body>
-</html>
+{% endblock %}
