--- a/ful/templates/ful/warehouses_detail.html
+++ b/ful/templates/ful/warehouses_detail.html
@@ -41,8 +41,8 @@
                                             class="t-card__title t-heading t-heading_xs"
                                             id="cardtitle1_735737182"
                                             field="li_title__5048100789100"><a
-                                                                                  style="color: rgb(255, 77, 0);"
-                                                                                  role="button">{{ object.name }}</a>
+                                            style="color: rgb(255, 77, 0);"
+                                            role="button">{{ object.name }}</a>
                                     </div>
                                     <div class="t-card__descr t-descr t-descr_sm" field="li_descr__5048100789100">Город:
                                         {{ object.city }}
@@ -85,7 +85,7 @@
     </script>
 </div>
 
-<div id="rec735737183" class="r t-rec t-rec_pt_45 t-rec_pb_15"
+<div id="rec735737182" class="r t-rec t-rec_pt_45 t-rec_pb_15"
      style="padding-top:50px;padding-bottom:15px;background-color:#eeeeee; " data-record-type="509"
      data-bg-color="#eeeeee"> <!-- t509 -->
     <div class="t509">
@@ -94,7 +94,7 @@
                 <h2
                         class="t-section__title t-title t-title_xs t-align_center t-margin_auto"
                         field="btitle">
-                    <div style="font-size: 62px;" data-customstyle="yes">Команда склада "{{ object.name }}"</div>
+                    <div style="font-size: 70px;" data-customstyle="yes">Команда склада "{{ object.name }}"</div>
                 </h2>
             </div>
         </div>
@@ -103,39 +103,26 @@
         </style>
         {% for employee in warehouses.warehouse.all %}
         <div class="t-card__container t-container">
-            <div class="t509__colwrapper t-col t-col_10 t-prefix_1">
-                <div class="t-item">
-                    <div class="t509__col t-col t-col_5 t509__leftcol">
-                        <div class="t509__textwrapper t-align_left" style="max-width:400px;">
-                            <div class="t509__content t-valign_middle">
-                                <div class="t509__box">
-                                    <div
-                                            class="t-card__title t-heading t-heading_xs"
-                                            id="cardtitle1_735737184"
-                                            field="li_title__5048100789100"><a
-                                                                                  style="color: rgb(255, 77, 0);"
-                                                                                  role="button">{{ employee.first_name }} {{ employee.last_name }}</a>
-                                    </div>
-                                    <div class="t-card__descr t-descr t-descr_sm" field="li_descr__5048100789100">Должность {{ employee.first_name }}</div>
-                                    <div class="t-card__descr t-descr t-descr_sm" field="li_descr__5048100789100">3</div>
-                                </div>
-                            </div>
-                        </div>
+            <p class="aligncenter">
+                <img src="{{ employee.photo | media_filter}}" alt="mdo" width="500px">
+            </p>
+            <style>.aligncenter {text-align: center;}</style>
+            <div class="t509__colwrapper t-col t-col_10 t-prefix_1" style="padding-top:50px;">
+                <div class="t509__box">
+                    <div class="t-section__title t-title t-title_xs t-align_center t-margin_auto">
+                        <h1 style="color: rgb(0, 0, 0); "
+                           role="button">{{ employee.first_name }} {{ employee.last_name }}</h1>
                     </div>
-                    <div class="t509__col t-col t-col_5 t509__rightcol t509__desktopimg">
-                        <div class="t509__imgwrapper" style="" itemscope itemtype="http://schema.org/ImageObject">
-                            <meta itemprop="image"
-                                  content="{{ warehouse.image | media_filter}}">
-                            <div class="t509__blockimg t-bgimg"
-                                 data-original="{{ warehouse.image | media_filter}}"
-                                 bgimgfield="li_img__5048100789100" data-image-width="460" data-image-height="340px"
-                                 style="background-image:url('{{ warehouse.image | media_filter}}');"></div>
-                        </div>
+                    {% if employee.job_title %}
+                    <div class="t-section__title t-title_xs t-align_center">
+                        <h3 style="color: rgb(255, 140, 90); "
+                           role="button">{{ employee.job_title }}</h3>
                     </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
-        <div id="rec735762125" class="r t-rec t-rec_pt_0 t-rec_pb_0"
+        <div id="rec735762124" class="r t-rec t-rec_pt_0 t-rec_pb_0"
              style="padding-top:0px;padding-bottom:0px;background-color:#eeeeee; " data-record-type="126"
              data-bg-color="#eeeeee"> <!-- T118 -->
             <div class="t118">
