Корректировка warehouses_list.html и categoryfaq_list.html

--- a/ful/templates/ful/categoryfaq_list.html
+++ b/ful/templates/ful/categoryfaq_list.html
@@ -34,7 +34,7 @@
             .t-section__descr {max-width:560px;}#rec822459679 .t-section__title {margin-bottom:105px;}#rec822459679 .t-section__descr {}@media screen and (max-width:960px) {#rec822459679 .t-section__title {margin-bottom:45px;}}
         </style>
         <ul role="list" class="t899__container t-list__container_inrow3 t-container">
-            {% for faq in warehouses.faq.all %}
+            {% for faq in category.faq.all %}
             <li class="t899__col t-col t-col_4 t-list__item t-item t-align_left t899__col-mobstyle">
                 <div class="t899__itemwrapper">
                     <div class="t899__wrapperleft t899__wrapper">
