--- a/ful/templates/ful/warehouses_list.html
+++ b/ful/templates/ful/warehouses_list.html
@@ -71,7 +71,7 @@
                                         {{ warehouse.address }}
                                     </div>
                                     <div class="t-card__descr t-descr t-descr_sm" field="li_descr__5048100789100">
-                                        <a type="button" class="btn btn-outline-success" href="{%url 'ful:warehouses_detail' warehouse.slug %}">подробнее</a>
+                                        <a type="button" class="btn btn-outline-success" href="{%url 'ful:warehouses_detail' warehouse.slug %}">подробнее о складе и команде</a>
                                     </div>
 
                                 </div>
