--- a/ful/templates/ful/categoryfaq_list.html
+++ b/ful/templates/ful/categoryfaq_list.html
@@ -2,7 +2,55 @@
 {% load static %}
 
 {% block content %}
-<div id="rec809369897" class="r t-rec t-rec_pt_0" style="padding-top:200px; " data-animationappear="off"
+<div id="rec735762121" class="r t-rec t-rec_pt_0 t-rec_pb_0"
+     style="padding-top:140px;padding-bottom:0px;background-color:#eeeeee; " data-record-type="126"
+     data-bg-color="#eeeeee"> <!-- T118 -->
+    <div class="t118">
+        <div class="t-container">
+            <div class="t-col t-col_12 ">
+                <hr class="t-divider t118__line" style="background-color:#000000;opacity:0.2;">
+            </div>
+        </div>
+    </div>
+</div>
+{% for category in object_list %}
+<div id="rec822459679" class="r t-rec t-rec_pt_60 t-rec_pb_45"
+     style="padding-top:20px;padding-bottom:80px;background-color:#eeeeee; " data-animationappear="off"
+     data-record-type="899" data-bg-color="#eeeeee"> <!-- t899 -->
+
+    <div class="t-section__container t-container t-container_flex">
+        <div class="t-col t-col_12 ">
+            <div
+                    class="t-title t-title_xs t-align_center t-margin_auto"
+                    field="btitle">
+                {{ category.title }}
+            </div>
+        </div>
+    </div>
+    <style>
+        .t-section__descr {max-width:560px;}#rec822459679 .t-section__title {margin-bottom:105px;}#rec822459679 .t-section__descr {}@media screen and (max-width:960px) {#rec822459679 .t-section__title {margin-bottom:45px;}}
+    </style>
+    <ul role="list" class="t899__container t-list__container_inrow3 t-container">
+        {% for faq in category.faq.all %}
+        <li class="t899__col t-col t-col_4 t-list__item t-item t-align_left t899__col-mobstyle">
+            <div class="t899__itemwrapper">
+                <div class="t899__wrapperleft t899__wrapper">
+                    <div class="t899__title t-name t-name_lg t899__bottommargin_sm"
+                         field="li_title__8881279303880">{{ faq.title }}
+                    </div>
+                    <div class="t899__descr t-descr t-descr_xs" field="li_descr__8881279303880">{{ faq.answer }}
+                    </div>
+                </div>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
+    <style> #rec822459679 .t899__title{color:#ff4d00;}#rec822459679 .t899__symbol{color:#ff4d00;opacity:0.3;}
+    </style>
+</div>
+{% endfor %}
+
+<div id="rec809369897" class="r t-rec t-rec_pt_0" style="padding-top:10px; " data-animationappear="off"
      data-record-type="213"> <!-- cover -->
     <div class="t-cover" id="recorddiv809369897" bgimgfield="img">
         <div class="t-cover__carrier" id="coverCarry809369897" data-content-cover-id="809369897"
@@ -10,50 +58,20 @@
              data-display-changed="true" data-content-cover-height="500px" data-content-cover-parallax=""
              data-content-use-image-for-mobile-cover="" style="height:680px;background-attachment:scroll; "
              itemscope itemtype="http://schema.org/ImageObject">
-            <meta itemprop="image"
-                  content="{% static 'image/faq.jpg' %}">
         </div>
     </div>
 </div>
-{% for category in object_list %}
-<div id="rec822459679" class="r t-rec t-rec_pt_60 t-rec_pb_45"
-     style="padding-top:60px;padding-bottom:45px;background-color:#eeeeee; " data-animationappear="off"
-     data-record-type="899" data-bg-color="#eeeeee"> <!-- t899 -->
-    <div class="t899">
 
-        <div class="t-section__container t-container t-container_flex">
+<div id="rec735762121" class="r t-rec t-rec_pt_0 t-rec_pb_0"
+     style="padding-top:100px;padding-bottom:0px;background-color:#eeeeee; " data-record-type="126"
+     data-bg-color="#eeeeee"> <!-- T118 -->
+    <div class="t118">
+        <div class="t-container">
             <div class="t-col t-col_12 ">
-                <div
-                        class="t-section__title t-title t-title_xs t-align_center t-margin_auto"
-                        field="btitle">
-                    {{ category.title }}
-                </div>
+                <hr class="t-divider t118__line" style="background-color:#000000;opacity:0.2;">
             </div>
         </div>
-        <style>
-            .t-section__descr {max-width:560px;}#rec822459679 .t-section__title {margin-bottom:105px;}#rec822459679 .t-section__descr {}@media screen and (max-width:960px) {#rec822459679 .t-section__title {margin-bottom:45px;}}
-        </style>
-        <ul role="list" class="t899__container t-list__container_inrow3 t-container">
-            {% for faq in category.faq.all %}
-            <li class="t899__col t-col t-col_4 t-list__item t-item t-align_left t899__col-mobstyle">
-                <div class="t899__itemwrapper">
-                    <div class="t899__wrapperleft t899__wrapper">
-                        <div class="t899__title t-name t-name_lg t899__bottommargin_sm"
-                             field="li_title__8881279303880">{{ faq.title }}
-                        </div>
-                        <div class="t899__descr t-descr t-descr_xs" field="li_descr__8881279303880">{{ faq.answer }}
-                        </div>
-                    </div>
-                </div>
-            </li>
-            {% endfor %}
-        </ul>
-
     </div>
-    <script>t_onReady(function() {t_onFuncLoad('t899_init',function() {t899_init('822459679');});});</script>
-    <style> #rec822459679 .t899__title{color:#ff4d00;}#rec822459679 .t899__symbol{color:#ff4d00;opacity:0.3;}
-    </style>
 </div>
-{% endfor %}
 
 {% endblock %}
