--- a/cabinet/templates/cabinet/base.html
+++ b/cabinet/templates/cabinet/base.html
@@ -82,7 +82,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'cabinet:supply' %}">
               <span data-feather="truck"></span>
               Поставки
             </a>
