--- a/cabinet/templates/cabinet/supply_list.html
+++ b/cabinet/templates/cabinet/supply_list.html
@@ -21,7 +21,7 @@
                 <th>Дата поставки</th>
                 <th>Количество грузовых мест</th>
                 <th>Добавить товар в поставку</th>
-                <th>Редактировать поставку</th>
+                <th>Редактировать поставку<br>(дату и грузовые места)</th>
                 <th>Статус поставки</th>
             </tr>
             </thead>
