--- a/cabinet/templates/cabinet/supply_detail.html
+++ b/cabinet/templates/cabinet/supply_detail.html
@@ -12,31 +12,27 @@
     </style>
     <p class="center_big">Состав поставки от {{object.delivery_date}}</p>
     <div class="table-responsive">
-        <a href="{% url 'cabinet:product_create' %}" class="btn btn-primary my-2">Добавить товар в поставку</a>
+        <a href="{% url 'cabinet:product_accept_create' %}" class="btn btn-primary my-2">Добавить товар в поставку</a>
         <table class="table table-striped table-sm">
             <thead>
             <tr>
                 <th>#</th>
-                <th>Изображение</th>
                 <th>Название</th>
-                <th>Артикул</th>
-                <th>Штрихкод</th>
-                <th>Остаток</th>
-                <th>Редактировать</th>
-                <th>Удалить</th>
+                <th>количество</th>
+                <th>изменить товар</th>
+                <th>убрать из поставки</th>
             </tr>
             </thead>
             <tbody>
-            {% for product in supplys.product_supply.all %}
+            {% for product in object.supply.all %}
             <tr>
                 <td>{{ forloop.counter }}</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-                <td>8</td>
+                <td>{{product}}</td>
+                <td>{{product.quantity}}</td>
+                <td><a class="btn btn-success" href="{% url 'cabinet:product_accept_detail' product.pk %}"
+                       role="button">Изменить</a></td>
+                <td><a class="btn btn-danger" href="{% url 'cabinet:product_delete' product.pk %}"
+                       role="button">Удалить</a></td>
             </tr>
             {% endfor %}
             </tbody>
