--- a/cabinet/templates/cabinet/dashboard_list.html
+++ b/cabinet/templates/cabinet/dashboard_list.html
@@ -29,7 +29,7 @@
                 <td><a href="{% url 'cabinet:product' %}">{{ product_count }}</a></td>
                 <td><a href="{% url 'cabinet:product' %}">{{ product_total_quantity }}</a></td>
                 <td><a href="{% url 'cabinet:supply' %}">{{ supply_total_quantity }}</a></td>
-                <td>0</td>
+                <td><a href="{% url 'cabinet:shipment' %}">{{ shipment_total_quantity }}</a></td>
             </tr>
             </tbody>
         </table>
