--- a/cabinet/templates/cabinet/base.html
+++ b/cabinet/templates/cabinet/base.html
@@ -69,7 +69,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'cabinet:company' %}">
               <span data-feather="users"></span>
               Моя компания
             </a>
@@ -87,7 +87,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'cabinet:shipment' %}">
               <span data-feather="truck"></span>
               Отгрузки
             </a>
