--- a/cabinet/templates/cabinet/shipment_form.html
+++ b/cabinet/templates/cabinet/shipment_form.html
@@ -8,12 +8,12 @@
     font-size: 400%;
 }
     </style>
-    <p class="center_big">Поступление товара</p>
+    <p class="center_big">Отгрузки</p>
     <div class="table-responsive">
         {% if object %}
-        <h1 class="fw-light">Изменение поступаемого товара</h1>
+        <h1 class="fw-light">Изменение отгрузки</h1>
         {% else %}
-        <h1 class="fw-light">Добавления поступаемого товара</h1>
+        <h1 class="fw-light">Добавления отгрузки</h1>
         {% endif %}
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
@@ -25,16 +25,6 @@
                 Создать
                 {% endif %}
             </button>
-            <a href="{% url 'cabinet:supply' %}" type="submit" class="btn btn-danger">
-                Назад
-            </a>
-            {% if messages %}
-            {% for message in messages %}
-            <div class="alert {{message.tags}} alert-dismissible fade show" role="alert">
-                {{ message }}
-            </div>
-            {% endfor %}
-            {% endif %}
         </form>
     </div>
 </main>
